--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 body {
     margin: 0;
 }
+#main-page {
+    position: absolute;
+    width: 100%;
+}
 .welcome-main-container {
     height: 75vh;
     background-color: purple;
@@ -32,6 +36,7 @@ body {
 }
 .clock {
     font-size: 4rem;
+    margin-bottom: 0;
 }
 .greeting {
     font-size: 1.5rem;
