--- a/style.css
+++ b/style.css
@@ -77,6 +77,9 @@ body {
     display: flex;
     justify-content: space-around;
 }
+.menu a {
+    display: block;
+}
 .section-container {
     position: relative;
     top: 20vh;
