--- a/style.css
+++ b/style.css
@@ -123,3 +123,8 @@ body {
     height: 70vh;
     background-color: firebrick;
 }
+#music ~ .section-content-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
