added bg image to main page

--- a/style.css
+++ b/style.css
@@ -2,18 +2,19 @@ body {
     margin: 0;
 }
 #main-page {
-    /* background-image: url('http://imagebank.biz/wp-content/uploads/2014/02/76747.jpg'); */
+    background-image: url('http://imagebank.biz/wp-content/uploads/2014/02/76747.jpg');
     position: absolute;
     width: 100%;
     z-index: 11;
 }
 .welcome-main-container {
     height: 75vh;
-    background-color: purple;
+    color: white;
+    /* background-color: purple; */
 }
 .title-container {
     display: flex;
-    background-color: lightblue;
+    /* background-color: lightblue; */
     height: 40%;
     align-items: flex-end;
     padding-left: 10%;
@@ -22,6 +23,7 @@ body {
     position: relative;
     font-size: 5em;
     width: 75%;
+    text-shadow: 2px 2px 5px gray;
 }
 .title:after {
     position: absolute;
@@ -34,13 +36,13 @@ body {
 }
 .weather-box {
     align-self: flex-start;
-    background-color: white;
+    /* background-color: white; */
     padding: 25px;
     text-align: center;
 }
 .time-container {
     display: flex;
-    background-color: lightcoral;
+    /* background-color: lightcoral; */
     height: 50%;
     justify-content: center;
 }
@@ -52,6 +54,7 @@ body {
 }
 .clock, .greeting, .mood-text {
     color: white;
+    text-shadow: 2px 2px 5px black;
 }
 .clock {
     font-size: 8vw;
@@ -63,7 +66,7 @@ body {
     margin: 0;
 }
 .button-header-container {
-    background-color: black;
+    /* background-color: black; */
     display: flex;
     height: 10%;
     justify-content: center;
@@ -79,14 +82,14 @@ body {
     align-items: center;
     justify-content: center;
     height: 25vh;
-    background-color: red;
+    /* background-color: red; */
 }
 .mood-button-container {
     display: flex;
     justify-content: space-around;
     width: 80%;
     height: 50%;
-    background-color: burlywood;
+    /* background-color: burlywood; */
 }
 .mood-button {
     width: 15%;
