--- a/style.css
+++ b/style.css
@@ -152,8 +152,27 @@ body {
     height: 70vh;
     background-color: firebrick;
 }
-#music ~ .section-content-container {
+#music ~ .section-content-container, #news ~ .section-content-container {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+#news-content-container {
+    width: 75%;
+    color: white;
+    /* background-color: white; */
+}
+.news-list {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+.news-list li {
+    font-family: Arial Narrow;
+    font-size: 2vw;
+    text-align: center;
+    text-shadow: 1px 1px 1px gray;
+    margin-bottom: 15px;
+    padding-left: 5px;
+    /* border-left: 2px solid red; */
 }
