--- a/style.css
+++ b/style.css
@@ -148,6 +148,14 @@ body {
 .section-header h3 {
     margin: auto;
 }
+.section-1::after, .section-2::after, .section-3::after, .section-4::after{
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    display: block;
+    background-color: rgba(0, 0, 0, .5);
+}
 .section-content-container {
     height: 70vh;
     background-color: firebrick;
@@ -156,4 +164,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.video-container {
+    z-index: 1;
 }
