--- a/style.css
+++ b/style.css
@@ -183,6 +183,11 @@ body {
     padding-left: 5px;
     border-left: 2px solid red;
 }
+.news-list li:hover {
+    cursor: pointer;
+    color: yellow;
+    border-left: 0;
+}
 .video-container, #news-content-container {
     z-index: 1;
 }
