adds css to article list on hover to better show user which article is being selected

--- a/style.css
+++ b/style.css
@@ -182,11 +182,12 @@ body {
     margin-bottom: 15px;
     padding-left: 5px;
     border-left: 2px solid red;
+    transition: .3s;
 }
 .news-list li:hover {
     cursor: pointer;
     color: yellow;
-    border-left: 0;
+    border-left-width: 15px;
 }
 .video-container, #news-content-container {
     z-index: 1;
