--- a/style.css
+++ b/style.css
@@ -214,6 +214,7 @@ body {
     position: absolute;
     left: 5%;
     top: 15%;
+    font-size: 1.2em;
 }
 .article-back-button, .read-article-button {
     padding: 15px;
@@ -223,6 +224,12 @@ body {
     background-color: rgba(255, 255, 255, .5);
     cursor: pointer;
     color: black;
+}
+.read-article-button-container {
+    width: 25%;
+    margin: auto;
+    font-size: 1.2em;
+    text-align: center;
 }
 .video-container, #news-content-container, #news-article-container {
     z-index: 1;
