renders gif to DOM modifes CSS to fix an isssue with pseudo elements modifies method reduceResultByAmt to only return an array if the data amount requested is more than 1

--- a/style.css
+++ b/style.css
@@ -153,6 +153,8 @@ body {
     position: absolute;
     height: 100%;
     width: 100%;
+    top: 0;
+    left: 0;
     display: block;
     background-color: rgba(0, 0, 0, .5);
 }
@@ -161,7 +163,8 @@ body {
     min-height: 70vh;
     background-color: firebrick;
 }
-#music ~ .section-content-container, #news ~ .section-content-container {
+#music ~ .section-content-container, #news ~ .section-content-container,
+ #gif ~ .section-content-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -231,6 +234,7 @@ body {
     font-size: 1.2em;
     text-align: center;
 }
-.video-container, #news-content-container, #news-article-container {
+.video-container, #news-content-container,
+ #news-article-container, #gif-content-container {
     z-index: 1;
 }
