--- a/style.css
+++ b/style.css
@@ -169,6 +169,10 @@ body {
     justify-content: center;
     align-items: center;
 }
+#poem-content-container {
+    width: 75%;
+    background-color: rgba(0,0,0,0.5);
+}
 #news-content-container, #news-article-container {
     max-width: 75%;
     color: white;
@@ -235,6 +239,6 @@ body {
     text-align: center;
 }
 .video-container, #news-content-container,
- #news-article-container, #gif-content-container {
+ #news-article-container, #gif-content-container, #poem-section-container {
     z-index: 1;
 }
