--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
     margin: 0;
 }
 #main-page {
-    background-image: url('images/morning.jpg');
     position: absolute;
     width: 100%;
     z-index: 11;
@@ -53,18 +52,17 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    width: 50%;
 }
 .clock, .greeting, .mood-text {
     color: white;
     text-shadow: 2px 2px 5px black;
 }
 .clock {
-    font-size: 8vw;
+    font-size: 7em;
     margin: 0;
 }
 .greeting {
-    font-size: 3.5vw;
+    font-size: 3em;
     font-weight: bold;
     margin: 0;
 }
@@ -76,7 +74,7 @@ body {
 }
 .mood-text {
     font-family: Times;
-    font-size: 3.5vw;
+    font-size: 3em;
     margin: 0;
 }
 .mood-bar {
@@ -108,14 +106,16 @@ body {
 }
 .header-container {
     position: fixed;
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 20vh;
-    background-color: orange;
+    background: linear-gradient(to right, navy, white);
     z-index: 10;
 }
 .header-container h1 {
+    margin: 0;
     color: white;
-    margin: auto;
     font-size: 3.5em;
     padding-top: 1%;
     padding-left: 5%;
@@ -140,13 +140,12 @@ body {
     color: lightblue;
     cursor: pointer;
 }
-.header-container {
-    background: linear-gradient(to right, navy, white);
-}
 .header-container .menu {
     display: flex;
     justify-content: space-around;
+    justify-self: flex-end;
     margin: 12px 0 0;
+    padding: 0;
 }
 .menu li {
     list-style-type: none;
@@ -156,9 +155,6 @@ body {
 }
 .menu li:last-child {
     border-right: 0;
-}
-.menu {
-    padding: 0;
 }
 .menu a {
     display: block;
@@ -199,14 +195,12 @@ body {
     background-color: rgba(0, 0, 0, .5);
 }
 .section-content-container {
-    padding: 15px;
-    min-height: 70vh;
-    background-color: firebrick;
-}
-.section-content-container {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 15px;
+    min-height: 70vh;
+    background-color: firebrick;
 }
 .section-2 {
     flex-direction: column-reverse;
@@ -306,3 +300,5 @@ body {
  #news-article-container, #gif-content-container, #poem-content-container {
     z-index: 1;
 }
+
+@media screen and ()
