--- a/style.css
+++ b/style.css
@@ -331,6 +331,9 @@ body {
         font-size: 4vw;
         text-decoration: none;
     }
+    .section-header h1 {
+        font-size: 4vw;
+    }
 }
 
 @media screen and (max-width: 700px) {
