--- a/style.css
+++ b/style.css
@@ -430,6 +430,9 @@ iframe {
         font-size: 4.5vw;
     }
     /* CONTENT PAGE  */
+    .section-header h1 {
+        font-size: 5.5vw;
+    }
     .video-container {
         width: 80%;
     }
