--- a/style.css
+++ b/style.css
@@ -1,6 +1,19 @@
 body {
     margin: 0;
 }
+main {
+    position: relative;
+}
+main:before {
+    content: '';
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    display: block;
+    background-color: rgba(0, 0, 0, .5);
+}
 #main-page {
     position: absolute;
     width: 100%;
